htdocs/t/ingredients.css
.b-title { height: 57px; }
.b-title .hrefs { top: 8px; bottom: auto; }

.hidden { display: none;  }

#menu .tweaker { position: absolute; top: 35px; font-size: 12px; -moz-user-select: none; -webkit-user-select: none; user-select: none; }

#menu #group-by { left: 0; }
#menu #sort-by { left: 310px; }
#menu #draw-by { left: 690px; }

#menu .tweaker .head,
#menu .tweaker .body,
#menu .tweaker .list,
#menu .tweaker .list .item { display: inline; display: inline-block; }

#menu .tweaker .head { color: #888; }

#menu .tweaker .list {  }
#menu .tweaker .list .item { background-color: #eee; cursor: pointer; padding: 1px 6px 2px; margin: 0 2px; -moz-border-radius: 4px; -webkit-border-radius: 4px; }
#menu .tweaker .list .item:hover { background-color: #ccc; }
#menu .tweaker .list .item.selected { background-color: #4a0; color: #fff; cursor: default; }

#output .group .head { font-size: 24px; margin: 30px 0 15px 0; }
#output .group .list { overflow: hidden; }
#output .group .list .item { float: left; position: relative; margin: 0 15px 15px 0; width: 100px; height: 140px; }
#output .group .list .item .ingredient .image { width: 100px; height: 100px; }
#output .group .list .item .ingredient .name { display: block; margin: 5px 0 0 0; text-align: center; font-size: 12px;}

.images#output .group .list .item { width: 100px; height: 100px; }
.images#output .group .list .item .ingredient .name { display: none; }
.images#output .group .list .item .ingredient { text-decoration: none; }
.images#output .group .list .item:hover .ingredient .name { display: block; position: absolute; z-index: 1; width: 100%; padding: 3px 0 5px; bottom: 0; background-color: #fff; background-color: rgba(255,255,255,0.8); text-shadow: #fff 1px 1px 1px, #fff 1px -1px 1px, #fff -1px 1px 1px, #fff -1px -1px 1px, #fff 0 0 5px, #fff 0 0 5px; }

.ingredient-window { position: relative; min-height: 200px; padding: 30px 0 10px; -moz-border-radius: 20px; -webkit-border-radius: 20px; background-color: #fff; }
.ingredient-window .description { overflow: hidden; }
.ingredient-window .photo { float: left; width: 290px; padding: 35px 10px 0 20px; text-align: center; }
.ingredient-window .about { margin: 0 45px 0 300px;  }
.ingredient-window .about .name { font-size: 20px; margin-bottom: 10px; }
.ingredient-window .about .text { font-size: 12px; }
.ingredient-window .about .text p { margin: 0px 0px 15px 0px;  }

.ingredient-window .cocktail-list { position: relative; margin-top: 45px; padding: 25px 20px 0; border-top: 1px solid #ccc; }
.ingredient-window .cocktail-list .prev,
.ingredient-window .cocktail-list .next { top: 75px; }
.ingredient-window .cocktail-list .prev { left: 15px; }
.ingredient-window .cocktail-list .next { right: 15px; }
.ingredient-window .cocktail-list .viewport { width: 650px; height: 123px; margin: 0 auto;  position: relative; overflow: hidden; }
.ingredient-window .cocktail-list .viewport .surface { width: 10000px; }
.ingredient-window .cocktail-list .point { float: left; width: 650px;  }

.cocktail-preview { width: 130px; float: left; text-align: center; font-size: 12px;  }
.cocktail-preview .image { display: block; margin: 0 auto 5px;  }

<!--# include virtual="popup.css" -->

.popup .popup-controls,
.popup .popup-window { width: 700px; margin: 0 auto; top: 95px; position: relative; }
.popup .popup-controls { height: 10px; }
.popup .popup-controls .cross { position: absolute; z-index: 100; right: -18px; top: -5px; }

<!--# if expr="$HTTP_USER_AGENT = /MSIE [678]|Opera/(9|10)\./" -->
.popup .popup-controls .cross { right: 0px; top: -14px; }
<!--# endif -->

